[gd_scene load_steps=3 format=3 uid="uid://dkca38ru64sir"]

[ext_resource type="Theme" uid="uid://dalxhu26t2fae" path="res://themes/menu.tres" id="1_2g4db"]
[ext_resource type="Script" path="res://scripts/menus/store.gd" id="1_ojr3y"]

[node name="StoreMenu" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -196.5
offset_right = 211.0
offset_bottom = 196.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2g4db")
script = ExtResource("1_ojr3y")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 422.0
offset_bottom = 394.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_font_sizes/font_size = 22
text = "Current spaceship tier:"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "?"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_color = Color(1, 0, 0.164706, 1)
theme_override_colors/font_pressed_color = Color(0.832494, 0, 0.129579, 1)
theme_override_colors/font_hover_color = Color(0.831373, 0, 0.129412, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0.164706, 1)
theme_override_font_sizes/font_size = 41
text = "UPGRADE"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back to main menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
